@@ -131,5 +131,13 @@
         layer=".interfaces.IPerSEOLayer"
         permission="zope2.View"
         />
+        
+	<browser:viewlet
+		name="collective.perseo.canonicalurl"
+		manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+		class=".viewlets.PerSEOCanonicalUrlViewlet"
+		layer=".interfaces.IPerSEOLayer"
+		permission="zope2.View"
+		/>
 
 </configure>
