@@ -193,6 +193,33 @@
 						</select>
 					</div>
 				</div>
+				<div class="field">
+					<label i18n:translate="label_canonical_tag" for="perseo_canonical">
+						Canonical URL
+					</label>
+					<div class="formHelp" i18n:translate="help_perseo_canonical">
+						Specify your canonical URL.
+						If your site has identical or vastly similar content that's accessible through multiple URLs,
+						this format provides you with more control over the URL returned in search results.
+					</div>
+					<input type="checkbox"
+						id="perseo_canonical_override"
+						name="perseo_canonical_override"
+						tal:attributes="checked python: perseo_context['has_perseo_canonical'] and 'on' or None;"
+						/>
+					<label i18n:translate="label_override" for="perseo_canonical_override">
+						Override the default
+					</label>
+					<div class="CanonicalField">
+						<input type="text"
+							id="perseo_canonical"
+							name="perseo_canonical"
+							size="55"
+							value=""
+							tal:attributes="value request/perseo_canonical | perseo_context/perseo_canonical;"
+							/>
+					</div>
+          		</div>
 			</fieldset>
 			<div class="formControls"
 				i18n:domain="plone">
